// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field metadata select creation tests group Create should fail with an invalid default value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Default value for existing options is invalid: invalid",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with an unknown default value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Default value for existing options is invalid: 'OPTION_424242'",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with comma in option label 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Label must not contain a comma",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with duplicated option ids 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Duplicated option id "fd1f11fd-3f05-4a33-bddf-800c3412ce98"",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with duplicated option positions 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Duplicated option position "1"",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with duplicated option values 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Duplicated option value "OPTION_1"",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with duplicated trimmed option values 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Duplicated option value "OPTION_1"",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with empty options 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Options are required for enum fields",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with empty string id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is invalid",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with empty string label 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option label "" is beneath 1 character",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with empty string value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option value "" is beneath 1 character",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with invalid option id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is invalid",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with invalid option value format 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Value must be in UPPER_CASE and follow snake_case "Option 1 and some other things, /"",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with not a string id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is invalid",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with not a string label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "label.includes is not a function",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with not a string value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Value must be in UPPER_CASE and follow snake_case "22222"",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with null id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is required",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with null label 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option label is required",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with null options 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Options are required for enum fields",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with null value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option value is required",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with only white spaces id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is invalid",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with only white spaces label 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option label "" is beneath 1 character",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with only white spaces value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option value "" is beneath 1 character",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with too long id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is invalid",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with too long label 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option label "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" exceeds 63 characters",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with too long value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option value "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" exceeds 63 characters",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with undefined option label 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option label is required",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with undefined option value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option value is required",
  },
]
`;

exports[`Field metadata select creation tests group Create should fail with undefined options 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Options are required for enum fields",
  },
]
`;
